--- a/src/main/resources/assets/micro_machinery/lang/en_us.json
+++ b/src/main/resources/assets/micro_machinery/lang/en_us.json
@@ -192,7 +192,7 @@
   "item.micro_machinery.ore_silver_concentrate": "Silver Concentrate",
   "item.micro_machinery.cast_stick": "Stick Cast",
   "item.micro_machinery.cast_ingot": "Ingot Cast",
-  "item.micro_machinery.cast_gear": "Gear Cast",
+  "item.micro_machinery.cast_gear": "Gear Blank Cast",
   "item.micro_machinery.cast_sword": "Sword Cast",
   "item.micro_machinery.monocrystalline_silicon": "MonoCrystalline_Silicon",
   "item.micro_machinery.wafer": "Wafer",
@@ -292,6 +292,11 @@
   "block.micro_machinery.slag_concrete": "Concrete Slag Block",
   "block.micro_machinery.clay_brick_block": "Clay Brick Block",
   "block.micro_machinery.fire_brick_block": "Fire Brick Block",
+  "block.micro_machinery.copper_cable": "Copper Cable",
+  "block.micro_machinery.nickel_cable": "Nickel Cable",
+  "block.micro_machinery.aluminum_cable": "Aluminum Cable",
+  "block.micro_machinery.tungsten_cable": "Tungsten Cable",
+  "block.micro_machinery.cobalt_cable": "Cobalt Cable",
   "fluid.micro_machinery.fluids.molten_aluminum": "Molten Aluminum",
   "fluid.micro_machinery.fluids.molten_bronze": "Molten Bronze",
   "fluid.micro_machinery.fluids.molten_chromium": "Molten Chromium",
@@ -368,6 +373,7 @@
   "block.micro_machinery.stone_anvil": "Stone Anvil",
   "block.micro_machinery.bronze_anvil": "Bronze Anvil",
   "block.micro_machinery.pigiron_anvil": "Iron Anvil",
+  "block.micro_machinery.lathe": "Lathe",
   "gui.fluid.name": "%s",
   "gui.fluid.amount": "%d mB/%d mB",
   "micro_machinery.notify.no_feedback": "no feedback",
