--- a/src/main/resources/assets/micro_machinery/lang/zh_cn.json
+++ b/src/main/resources/assets/micro_machinery/lang/zh_cn.json
@@ -192,7 +192,7 @@
   "item.micro_machinery.ore_silver_concentrate": "银精矿",
   "item.micro_machinery.cast_stick": "硬化粘土铸模（杆）",
   "item.micro_machinery.cast_ingot": "硬化粘土铸模（锭）",
-  "item.micro_machinery.cast_gear": "硬化粘土铸模（齿轮）",
+  "item.micro_machinery.cast_gear_blank": "硬化粘土铸模（齿轮坯）",
   "item.micro_machinery.cast_sword": "硬化粘土铸模（剑刃）",
   "item.micro_machinery.monocrystalline_silicon": "单晶硅",
   "item.micro_machinery.wafer": "晶圆",
@@ -292,6 +292,11 @@
   "block.micro_machinery.slag_concrete": "炉渣混凝土块",
   "block.micro_machinery.clay_brick_block": "粘土砖块",
   "block.micro_machinery.fire_brick_block": "耐火砖块",
+  "block.micro_machinery.copper_cable": "铜导线",
+  "block.micro_machinery.nickel_cable": "镍导线",
+  "block.micro_machinery.aluminum_cable": "铝导线",
+  "block.micro_machinery.tungsten_cable": "钨导线",
+  "block.micro_machinery.cobalt_cable": "钴导线",
   "fluid.micro_machinery.fluids.molten_aluminum": "熔融铝",
   "fluid.micro_machinery.fluids.molten_bronze": "熔融青铜",
   "fluid.micro_machinery.fluids.molten_chromium": "熔融铬",
@@ -368,6 +373,7 @@
   "block.micro_machinery.stone_anvil": "石砧",
   "block.micro_machinery.bronze_anvil": "青铜砧",
   "block.micro_machinery.pigiron_anvil": "铸铁砧",
+  "block.micro_machinery.lathe": "车床",
   "gui.fluid.name": "%s",
   "gui.fluid.amount": "%d mB/%d mB",
   "micro_machinery.notify.no_feedback": "毫无反馈",
