--- a/src/main/resources/assets/micro_machinery/lang/en_us.json
+++ b/src/main/resources/assets/micro_machinery/lang/en_us.json
@@ -212,6 +212,9 @@
   "item.micro_machinery.bronze_sword0": "Bronze Blade",
   "item.micro_machinery.hss_additive": "High_Speed Steel Additive",
   "item.micro_machinery.ss_additive": "Stainless Steel Additive",
+  "item.micro_machinery.sponge_iron":"Sponge Iron",
+  "item.micro_machinery.hot_iron_ingot":"Hot Iron Ingot",
+  "item.micro_machinery.hot_steel_ingot":"Hot Steel Ingot(Unfinished)",
   "block.micro_machinery.stalinite": "Stalinite",
   "block.micro_machinery.steel_scaffolding": "Steel Scaffolding",
   "block.micro_machinery.orecopper": "Copper Ore",
