--- a/src/main/resources/assets/micro_machinery/lang/zh_cn.json
+++ b/src/main/resources/assets/micro_machinery/lang/zh_cn.json
@@ -212,6 +212,9 @@
   "item.micro_machinery.bronze_sword0": "青铜剑刃",
   "item.micro_machinery.hss_additive": "高速钢添加剂",
   "item.micro_machinery.ss_additive": "不锈钢添加剂",
+  "item.micro_machinery.sponge_iron":"海绵状铁",
+  "item.micro_machinery.hot_iron_ingot":"灼热的铁锭",
+  "item.micro_machinery.hot_steel_ingot":"灼热的渗碳铁锭（未完成）",
   "block.micro_machinery.stalinite": "强化玻璃",
   "block.micro_machinery.steel_scaffolding": "钢制脚手架",
   "block.micro_machinery.orecopper": "铜矿石",
