20201115 10.25 for lang and new laser.png/plasma_generator.png/logo

--- a/src/main/resources/assets/micro_machinery/lang/en_us.json
+++ b/src/main/resources/assets/micro_machinery/lang/en_us.json
@@ -118,7 +118,7 @@
   "item.micro_machinery.roll_invar": "Invar Roll",
   "item.micro_machinery.roll_ss": "Stainless Steel Roll",
   "item.micro_machinery.roll_tungsten_steel": "Tungsten Steel Roll",
-  "item.micro_machinery.roll_iron": "Iron Roll",
+  "item.micro_machinery.roll_steel": "Steel Roll",
   "item.micro_machinery.roll_hss": "High_Speed Steel Roll",
   "item.micro_machinery.slag": "Slag",
   "item.micro_machinery.slag_manganese": "Manganese Slag",
