--- a/src/main/resources/assets/micro_machinery/lang/zh_cn.json
+++ b/src/main/resources/assets/micro_machinery/lang/zh_cn.json
@@ -118,7 +118,7 @@
   "item.micro_machinery.roll_invar": "殷钢辊",
   "item.micro_machinery.roll_ss": "不锈钢辊",
   "item.micro_machinery.roll_tungsten_steel": "钨钢辊",
-  "item.micro_machinery.roll_iron": "铁辊",
+  "item.micro_machinery.roll_steel": "钢辊",
   "item.micro_machinery.roll_hss": "高速钢辊",
   "item.micro_machinery.slag": "炉渣",
   "item.micro_machinery.slag_manganese": "含锰炉渣",
