--- a/src/main/resources/assets/micro_machinery/lang/en_us.json
+++ b/src/main/resources/assets/micro_machinery/lang/en_us.json
@@ -295,6 +295,7 @@
   "block.micro_machinery.slag_concrete": "Concrete Slag Block",
   "block.micro_machinery.clay_brick_block": "Clay Brick Block",
   "block.micro_machinery.fire_brick_block": "Fire Brick Block",
+  "block.micro_machinery.bellow": "Bellow",
   "block.micro_machinery.copper_cable": "Copper Cable",
   "block.micro_machinery.nickel_cable": "Nickel Cable",
   "block.micro_machinery.aluminum_cable": "Aluminum Cable",
