--- a/src/main/resources/assets/micro_machinery/lang/zh_cn.json
+++ b/src/main/resources/assets/micro_machinery/lang/zh_cn.json
@@ -295,6 +295,7 @@
   "block.micro_machinery.slag_concrete": "炉渣混凝土块",
   "block.micro_machinery.clay_brick_block": "粘土砖块",
   "block.micro_machinery.fire_brick_block": "耐火砖块",
+  "block.micro_machinery.bellow": "风箱",
   "block.micro_machinery.copper_cable": "铜导线",
   "block.micro_machinery.nickel_cable": "镍导线",
   "block.micro_machinery.aluminum_cable": "铝导线",
