--- a/src/main/resources/assets/micro_machinery/lang/en_us.json
+++ b/src/main/resources/assets/micro_machinery/lang/en_us.json
@@ -370,8 +370,8 @@
   "item.micro_machinery.apple_juice_bucket": "Apple Juice Bucket",
   "item.micro_machinery.golden_apple_juice_bucket": "Golden Apple Juice Bucket",
   "item.micro_machinery.ethene_bucket": "Ethene Bucket",
-  "container.klin": "Klin",
-  "block.micro_machinery.klin": "Klin",
+  "container.klin": "Kiln",
+  "block.micro_machinery.klin": "Kiln",
   "block.micro_machinery.generator": "Generator",
   "block.micro_machinery.hand_generator": "Hand Generator",
   "block.micro_machinery.stone_anvil": "Stone Anvil",
