--- a/src/main/resources/assets/micro_machinery/lang/en_us.json
+++ b/src/main/resources/assets/micro_machinery/lang/en_us.json
@@ -47,6 +47,26 @@
   "item.micro_machinery.dust_gold": "Gold Dust",
   "item.micro_machinery.dust_iron": "Iron Dust",
   "item.micro_machinery.dust_copper": "Copper Dust",
+  "//ingot": "",
+  "item.micro_machinery.ingot_tin": "Tin Ingot",
+  "item.micro_machinery.ingot_silver": "Silver Ingot",
+  "item.micro_machinery.ingot_nickel": "Nickel Ingot",
+  "item.micro_machinery.ingot_aluminum": "Aluminum Ingot",
+  "item.micro_machinery.ingot_manganese": "Manganese Ingot",
+  "item.micro_machinery.ingot_steel": "Steel Ingot",
+  "item.micro_machinery.ingot_chromium": "Chromium Ingot",
+  "item.micro_machinery.ingot_vanadium": "Vanadium Ingot",
+  "item.micro_machinery.ingot_cobalt": "Cobalt Ingot",
+  "item.micro_machinery.ingot_titanium": "Titanium Ingot",
+  "item.micro_machinery.ingot_tungsten": "Tungsten Ingot",
+  "item.micro_machinery.ingot_bronze": "Bronze Ingot",
+  "item.micro_machinery.ingot_invar": "Invar Ingot",
+  "item.micro_machinery.ingot_ss": "Stainless Steel Ingot",
+  "item.micro_machinery.ingot_hss": "High Speed Steel Ingot",
+  "item.micro_machinery.ingot_tungsten_steel": "Tungsten Steel Ingot",
+  "item.micro_machinery.ingot_sma": "SMA Ingot",
+  "item.micro_machinery.ingot_carbide": "Carbide Ingot",
+  "item.micro_machinery.ingot_graphite": "Graphite Ingot",
   "//plate": "",
   "item.micro_machinery.plate_tin": "Tin Plate",
   "item.micro_machinery.plate_silver": "Silver Plate",
@@ -377,10 +397,12 @@
   "block.micro_machinery.klin": "Kiln",
   "block.micro_machinery.generator": "Generator",
   "block.micro_machinery.hand_generator": "Hand Generator",
-  "block.micro_machinery.stone_anvil": "Stone Anvil",
-  "block.micro_machinery.bronze_anvil": "Bronze Anvil",
-  "block.micro_machinery.pigiron_anvil": "Iron Anvil",
+  "block.micro_machinery.anvil_stone": "Stone Anvil",
+  "block.micro_machinery.anvil_copper": "Copper Anvil",
+  "block.micro_machinery.anvil_steel": "Steel Anvil",
   "block.micro_machinery.lathe": "Lathe",
+  "block.micro_machinery.pump": "Pump",
+  "block.micro_machinery.electrolysis": "Electrolysis",
   "gui.fluid.name": "%s",
   "gui.fluid.amount": "%d mB/%d mB",
   "micro_machinery.notify.no_feedback": "no feedback",
