--- a/src/main/resources/assets/micro_machinery/lang/zh_cn.json
+++ b/src/main/resources/assets/micro_machinery/lang/zh_cn.json
@@ -47,6 +47,26 @@
   "item.micro_machinery.dust_gold": "金粉",
   "item.micro_machinery.dust_iron": "铁粉",
   "item.micro_machinery.dust_copper": "铜粉",
+  "//ingot": "",
+  "item.micro_machinery.ingot_tin": "锡锭",
+  "item.micro_machinery.ingot_silver": "银锭",
+  "item.micro_machinery.ingot_nickel": "镍锭",
+  "item.micro_machinery.ingot_aluminum": "铝锭",
+  "item.micro_machinery.ingot_manganese": "锰锭",
+  "item.micro_machinery.ingot_steel": "钢锭",
+  "item.micro_machinery.ingot_chromium": "铬锭",
+  "item.micro_machinery.ingot_vanadium": "钒锭",
+  "item.micro_machinery.ingot_cobalt": "钴锭",
+  "item.micro_machinery.ingot_titanium": "钛锭",
+  "item.micro_machinery.ingot_tungsten": "钨锭",
+  "item.micro_machinery.ingot_bronze": "青铜锭",
+  "item.micro_machinery.ingot_invar": "殷钢锭",
+  "item.micro_machinery.ingot_ss": "不锈钢锭",
+  "item.micro_machinery.ingot_hss": "高速钢锭",
+  "item.micro_machinery.ingot_tungsten_steel": "钨钢锭",
+  "item.micro_machinery.ingot_sma": "记忆合金锭",
+  "item.micro_machinery.ingot_carbide": "硬质合金锭",
+  "item.micro_machinery.ingot_graphite": "石墨锭",
   "//plate": "",
   "item.micro_machinery.plate_tin": "锡板",
   "item.micro_machinery.plate_silver": "银板",
@@ -381,6 +401,8 @@
   "block.micro_machinery.anvil_copper": "铜砧",
   "block.micro_machinery.anvil_steel": "钢砧",
   "block.micro_machinery.lathe": "车床",
+  "block.micro_machinery.pump": "电动泵",
+  "block.micro_machinery.electrolysis": "电解机",
   "gui.fluid.name": "%s",
   "gui.fluid.amount": "%d mB/%d mB",
   "micro_machinery.notify.no_feedback": "毫无反馈",
